--- a/src/bunit.generators/bunit.generators.csproj
+++ b/src/bunit.generators/bunit.generators.csproj
@@ -7,6 +7,14 @@
 		<RootNamespace>Bunit</RootNamespace>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<PackageId>bunit.generators</PackageId>
+		<Title>bUnit.generators</Title>
+		<Description>
+			bUnit.generators is an extension to bUnit that provides code generators for stubbing components.
+		</Description>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4">
