--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -84,14 +84,17 @@ jobs:
           echo "TERM=xterm" >> $GITHUB_ENV
 
       - name: 🛠️ Building bUnit
-        run: dotnet build /p:PublicRelease=true
+        run: dotnet build /p:PublicRelease=true -c release
 
       - name: 🛠️ Verify docs samples
         run: dotnet test docs/samples/samples.sln
 
       - name: 📄 Building docs
         working-directory: ./docs/site
-        run: dotnet run Site.csproj
+        run: |
+          dotnet tool install --global docfx --version 2.74.1
+          docfx metadata
+          docfx build
 
       - name: 🛠️ Deploy to GitHub Pages
         if: success()
