--- a/src/bunit.generators/bunit.generators.csproj
+++ b/src/bunit.generators/bunit.generators.csproj
@@ -7,13 +7,43 @@
 		<RootNamespace>Bunit</RootNamespace>
 	</PropertyGroup>
 
-	<PropertyGroup>
+	<PropertyGroup Label="NuGet package information">
 		<PackageId>bunit.generators</PackageId>
 		<Title>bUnit.generators</Title>
 		<Description>
 			bUnit.generators is an extension to bUnit that provides code generators for stubbing components.
 		</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/bUnit-dev/bUnit</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageProjectUrl>https://bunit.egilhansen.com</PackageProjectUrl>
+		<PackageTags>bUnit;razor components;blazor components;unit testing;testing blazor components;blazor server;blazor wasm</PackageTags>
+		<Authors>Egil Hansen</Authors>
+		<Company>Egil Hansen</Company>
+		<Copyright>Egil Hansen</Copyright>
+		<Product>bUnit</Product>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageIcon>bunit-logo.png</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageReleaseNotes>
+			Changes in bUnit #{RELEASE_VERSION}#
+
+			#{RELEASE_NOTES}#
+
+			See the full changelog at https://github.com/bUnit-dev/bUnit/releases
+		</PackageReleaseNotes>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\..\bunit-logo.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="..\..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
