--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,26 +108,7 @@ jobs:
       - name: Validate package
         shell: pwsh
         run: meziantou.validate-nuget-package (Get-ChildItem "${{ env.NUGET_DIRECTORY }}/*.nupkg") --excluded-rules IconMustBeSet
-
-  release-preview:
-    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v2'
-    runs-on: ubuntu-latest
-    needs: [ validate-nuget, run-test, validate_template, validate-docs ]
-    steps:
-      - uses: actions/download-artifact@v3
-        with:
-          name: ${{ env.NUGET_PACKAGES_ARTIFACT }}
-          path: ${{ env.NUGET_DIRECTORY }}
-
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v4
-
-      - name: 🛠️ Upload library to GitHub Package Repository
-        run: dotnet nuget push ${{ env.NUGET_DIRECTORY }}/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/bunit-dev/index.json --skip-duplicate --no-symbols
-
-      - name: 🛠️ Upload library to NuGet.org repository
-        run: dotnet nuget push ${{ env.NUGET_DIRECTORY }}/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols
-
+        
   run-test:
     strategy:
       fail-fast: false
@@ -187,7 +168,7 @@ jobs:
 
       - name: ✳ Install bUnit template
         run: |
-          dotnet new install bunit.template::${NBGV_NuGetPackageVersion} --nuget-source ${{ env.NUGET_DIRECTORY }}
+          dotnet new install bunit.template::${NBGV_SimpleVersion}${NBGV_PrereleaseVersion} --nuget-source ${{ env.NUGET_DIRECTORY }}
 
       - name: ✔ Verify xUnit template
         run: |
@@ -261,3 +242,22 @@ jobs:
         uses: actions/checkout@v4
       - name: 'Dependency Review'
         uses: actions/dependency-review-action@v3
+
+  release-preview:
+    if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/v2'
+    runs-on: ubuntu-latest
+    needs: [ validate-nuget, run-test, validate_template, validate-docs ]
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.NUGET_PACKAGES_ARTIFACT }}
+          path: ${{ env.NUGET_DIRECTORY }}
+
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v4
+
+      - name: 🛠️ Upload library to GitHub Package Repository
+        run: dotnet nuget push ${{ env.NUGET_DIRECTORY }}/*.nupkg -k ${{ secrets.GITHUB_TOKEN }} -s https://nuget.pkg.github.com/bunit-dev/index.json --skip-duplicate --no-symbols
+
+      - name: 🛠️ Upload library to NuGet.org repository
+        run: dotnet nuget push ${{ env.NUGET_DIRECTORY }}/*.nupkg -k ${{ secrets.NUGET_KEY }} -s https://api.nuget.org/v3/index.json --skip-duplicate --no-symbols
