--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,10 +79,11 @@ jobs:
         dotnet pack src/bunit.generators/ -c release --output ${{ env.NUGET_DIRECTORY }} -p:ContinuousIntegrationBuild=true -p:publicrelease=true
 
     # Publish the NuGet package as an artifact, so they can be used in the following jobs
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@v4
       with:
         name: ${{ env.NUGET_PACKAGES_ARTIFACT }}
         if-no-files-found: error
+        compression-level: 0 # nuget files already compressed
         retention-days: 7
         path: ${{ env.NUGET_DIRECTORY }}/*.nupkg
 
@@ -93,7 +94,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: ${{ env.NUGET_PACKAGES_ARTIFACT }}
           path: ${{ env.NUGET_DIRECTORY }}
@@ -156,7 +157,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
 
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: ${{ env.NUGET_PACKAGES_ARTIFACT }}
           path: ${{ env.NUGET_DIRECTORY }}
@@ -248,7 +249,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ validate-nuget, run-test, validate_template, validate-docs ]
     steps:
-      - uses: actions/download-artifact@v3
+      - uses: actions/download-artifact@v4
         with:
           name: ${{ env.NUGET_PACKAGES_ARTIFACT }}
           path: ${{ env.NUGET_DIRECTORY }}
