--- a/tests/.editorconfig
+++ b/tests/.editorconfig
@@ -42,6 +42,7 @@ dotnet_diagnostic.CA2007.severity = none            # https://github.com/atc-net
 
 dotnet_diagnostic.CA1819.severity = suggestion		# CA1819: Properties should not return arrays
 dotnet_diagnostic.CA1849.severity = suggestion		# CA1849: Call async methods when in an async method
+dotnet_diagnostic.CA2255.severity = suggestion		# CA2255:  The 'ModuleInitializer' attribute is only intended to be used in application code or advanced source generator scenarios
 dotnet_diagnostic.xUnit1026.severity = none			# xUnit1026: Theory methods should use all of their parameters
 dotnet_diagnostic.xUnit1034.severity = none			# xUnit1034: Null should not be used for type parameter
 dotnet_diagnostic.S1144.severity = suggestion		# S1144: Unused private types or members should be removed
