--- a/src/bunit.web/bunit.web.csproj
+++ b/src/bunit.web/bunit.web.csproj
@@ -44,8 +44,8 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="AngleSharp" Version="1.0.7" />
-		<PackageReference Include="AngleSharp.Css" Version="1.0.0-alpha-99" />
+		<PackageReference Include="AngleSharp" Version="1.1.0" />
+		<PackageReference Include="AngleSharp.Css" Version="1.0.0-beta.139" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="$(DotNet6Version)" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="$(DotNet6Version)" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(DotNet6Version)" />
@@ -55,8 +55,8 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net7.0'">
-		<PackageReference Include="AngleSharp" Version="1.0.7" />
-		<PackageReference Include="AngleSharp.Css" Version="1.0.0-alpha-99" />
+		<PackageReference Include="AngleSharp" Version="1.1.0" />
+		<PackageReference Include="AngleSharp.Css" Version="1.0.0-beta.139" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="$(DotNet7Version)" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="$(DotNet7Version)" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(DotNet7Version)" />
@@ -66,8 +66,8 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<PackageReference Include="AngleSharp" Version="1.0.7" />
-		<PackageReference Include="AngleSharp.Css" Version="1.0.0-alpha-99" />
+		<PackageReference Include="AngleSharp" Version="1.1.0" />
+		<PackageReference Include="AngleSharp.Css" Version="1.0.0-beta.139" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="$(DotNet8Version)" />
 		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="$(DotNet8Version)" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(DotNet8Version)" />
