--- a/src/bunit/bunit.csproj
+++ b/src/bunit/bunit.csproj
@@ -28,7 +28,7 @@
 		<ProjectReference Include="..\bunit.generators.internal\bunit.generators.internal.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
-	<ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet8Version)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet8Version)" />
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet8Version)" />
@@ -41,6 +41,18 @@
 
 		<!-- Due to a CVE in System.Text.Json we explicitly reference the latest version of System.Text.Json -->
 		<PackageReference Include="System.Text.Json" Version="8.0.4" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="$(DotNet9Version)" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="$(DotNet9Version)" />
 	</ItemGroup>
 
 	<ItemGroup Label="Implicit usings" Condition="$(MSBuildProjectName) != 'bunit.template'">
