--- a/docs/samples/.editorconfig
+++ b/docs/samples/.editorconfig
@@ -17,9 +17,11 @@ tab_size = 2
 indent_style = space
 indent_size = 2
 indent_width = 2
+
 dotnet_diagnostic.BL0001.severity = none
 dotnet_diagnostic.BL0002.severity = none
 dotnet_diagnostic.BL0003.severity = none
 dotnet_diagnostic.BL0004.severity = none
 dotnet_diagnostic.BL0005.severity = none
 dotnet_diagnostic.BL0006.severity = none
+dotnet_diagnostic.BL0007.severity = none
