ci: fix mistake in rebase workflow

--- a/.github/workflows/rebase-v2-on-main.yml
+++ b/.github/workflows/rebase-v2-on-main.yml
@@ -43,7 +43,7 @@ jobs:
         continue-on-error: true
         run: |
           git checkout v2
-          git git rebase origin/main
+          git rebase origin/main
           git push origin v2
 
       - name: ⏭ Create pull request from main to v2 when direct rebase fails
