ci: disable automatic rebase attempt

--- a/.github/workflows/rebase-v2-on-main.yml
+++ b/.github/workflows/rebase-v2-on-main.yml
@@ -43,6 +43,7 @@ jobs:
         continue-on-error: true
         run: |
           git checkout v2
+          git fetch
           git rebase origin/main
           git push origin v2
 
