--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -142,15 +142,15 @@ jobs:
       - name: 🧪 Run unit tests
         if: matrix.os != 'macos-latest'
         run: |
-          dotnet test -c release --no-build --blame --blame-crash --blame-hang -p:VSTestUseMSBuildOutput=false -f netcoreapp3.1 
-          dotnet test -c release --no-build --blame --blame-crash --blame-hang -p:VSTestUseMSBuildOutput=false -f net5.0
+          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f netcoreapp3.1 
+          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net5.0
 
       - name: 🧪 Run unit tests
         run: |
-          dotnet test -c release --no-build --blame --blame-crash --blame-hang -p:VSTestUseMSBuildOutput=false -f net6.0
-          dotnet test -c release --no-build --blame --blame-crash --blame-hang -p:VSTestUseMSBuildOutput=false -f net7.0
-          dotnet test -c release --no-build --blame --blame-crash --blame-hang -p:VSTestUseMSBuildOutput=false -f net8.0
-          dotnet test -c release --no-build --blame --blame-crash --blame-hang -p:VSTestUseMSBuildOutput=false -f net9.0
+          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net6.0
+          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net7.0
+          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net8.0
+          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net9.0
 
       - name: 📛 Upload hang- and crash-dumps on test failure
         if: failure()
