--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,21 +136,8 @@ jobs:
             8.0.x
             9.0.x
 
-      - name: 🧪 Build project
-        run: dotnet build -c release
-
       - name: 🧪 Run unit tests
-        if: matrix.os != 'macos-latest'
-        run: |
-          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f netcoreapp3.1 
-          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net5.0
-
-      - name: 🧪 Run unit tests
-        run: |
-          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net6.0
-          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net7.0
-          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net8.0
-          dotnet test -c release --no-build -p:VSTestUseMSBuildOutput=false -f net9.0
+        run: dotnet test -c release -p:VSTestUseMSBuildOutput=false --verbosity detailed
 
       - name: 📛 Upload hang- and crash-dumps on test failure
         if: failure()
