--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-13, windows-latest]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -231,7 +231,7 @@ jobs:
         run: dotnet build -c release
 
       - name: 🧪 Run sample unit tests
-        run: dotnet test docs/samples/samples.sln
+        run: dotnet test docs/samples/samples.sln -c release -p:VSTestUseMSBuildOutput=false
 
       - name: 📄 Build docs
         working-directory: ./docs/site
