--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
             9.0.x
 
       - name: 🧪 Run unit tests
-        run: dotnet test -c release -p:VSTestUseMSBuildOutput=false --verbosity detailed
+        run: dotnet test -c release -p:VSTestUseMSBuildOutput=false
 
       - name: 📛 Upload hang- and crash-dumps on test failure
         if: failure()
