--- a/src/bunit.core/bunit.core.csproj
+++ b/src/bunit.core/bunit.core.csproj
@@ -50,4 +50,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="$(DotNet9Version)" />
 	</ItemGroup>
 
+	<ItemGroup Condition="!$([MSBuild]::IsTargetFrameworkCompatible('$(TargetFramework)', 'net9.0'))">
+		<PackageReference Include="Backport.System.Threading.Lock" Version="1.1.6" />
+	</ItemGroup>
+
 </Project>
